added wind and OsmBuildings layers to race-cesium GPS based wind visualization is based on https://github.com/RaymanNg/3D-Wind-Field and still has to be extended to display clamped to the ground.
the wind field also still needs to directly import from NOAA servers,
using server-side NetCDF

the buildings layer uses Cesium's osmbuildings.org data converted into
3d tiles. We also want to import from Microsofts https://github.com/microsoft/USBuildingFootprints
for which there is the GeoJsonFilterStream can be used to reduce data
size based on region of interest