@@ -33,6 +33,11 @@ object CommonRaceSettings {
         resolvers ++= Dependencies.dependencyResolvers,
 
         run / fork := true,
+
+        // TODO - get rid of these once we fully moved from WorldWind (in-process) to Cesium (browser) UIs
+        run / javaOptions += "--add-opens java.desktop/sun.awt=ALL-UNNAMED",
+        run / javaOptions += "--add-opens java.desktop/com.apple.eawt=ALL-UNNAMED",
+
         Test / fork := true,
         outputStrategy := Some(StdoutOutput),
         cleanFiles += baseDirectory.value / "tmp",
